--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
                 <li>React e Next.js</li>
         </ul>
         <p>Iremos criar soluções criativas!</p>
-        <img src="images/image.svg" alt="Desenvolvimento de Interfaces Web"
+        <img src="images/image.svg" alt="Desenvolvimento de Interfaces Web">
 
-         <article>
             <h2>Laboratórios</h2>
 
             <article id="Labs">
@@ -41,35 +40,8 @@
                 <section>
                     <a href="lab2/index.html">Lab 2</a>
                 </section>
-                <section>
-                    <a href="Lab3/">Lab 3</a>
-                </section>
-                <section>
-                    <a href="Lab4/">Lab 4</a>
-                </section>
-                <section>
-                    <a href="Lab5/">Lab 5</a>
-                </section>
-                <section>
-                    <a href="Lab6/">Lab 6</a>
-                </section>
-
-                <section>
-                    <a href="Lab7/">Lab 7</a>
-                </section>
-
-                <section>
-                    <a href="Lab8/">Lab 8</a>
-                </section>
-
-                <section>
-                    <a href="Lab9/">Lab 9</a>
-                </section>
-
-                <section>
-                    <a href="Lab10/">Lab 10</a>
-                </section>
             </article>
+
     </main>
 
     <footer>
