--- a/lab2/multimedia.html
+++ b/lab2/multimedia.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Lubango - Multimédia</title>
 </head>
 
@@ -43,11 +44,12 @@
 
         <!-- Seção de Vídeo -->
         <section id="video">
-            <h3>Vídeo</h3>
-            <iframe width="560" height="315" 
-                src="https://www.youtube.com/embed/3HSPWZrEXXE" 
+            <h3>Vídeo</h3>´
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/DZXONfn5VOs?si=APGYYs-KLLLXPV9M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 title="Vídeo sobre Lubango" frameborder="0" allowfullscreen>
+        
             </iframe>
+            
         </section>
 
         <!-- Seção de Poema -->
