--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                 <section>
                     <a href="lab2/index.html">Lab 2</a>
                 </section>
+                <section>
+                    <a href="lab3/index.html">Lab 3</a>
+                </section>
             </article>
 
     </main>
