--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
   <main>
     <section class="hero" id="hero">
       <div class="hero-text">
-        <h1>Desenvolva o Futuro</h1>
-        <p>Aprenda a criar interfaces criativas e interativas.</p>
-        <a href="#projetos" class="cta-button">Ver Projetos</a>
+        <h1>Denivaldo António</h1>
+        <p>Sobre mim :</p>
+        <p>!!!!!!!!!!!</p>
+
+     <a href="#projetos" class="cta-button">Ver Projetos</a> 
       </div>
     </section>
 
