--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       <div class="hero-text">
         <h1>Denivaldo António</h1>
         <p>Sobre mim :</p>
-        <p>!!!!!!!!!!!</p>
+        <p>Chamo-me Denivaldo Márcio das Neves António.
+Sou estudante de Engenharia Informática 
+Ao longo do meu percurso académico, tenho trabalhado em projetos que envolvem linguagens como Java, Kotlin e C, além de criação de páginas em HTML e CSS. Gosto de unir a parte técnica com a criatividade, desenvolvendo soluções que sejam funcionais e ao mesmo tempo apelativas.</p>
 
      <a href="#projetos" class="cta-button">Ver Projetos</a> 
       </div>
