--- a/lab3/multimedia.html
+++ b/lab3/multimedia.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="multimedia.css">
     <title>Lubango - Multimédia</title>
 </head>
 
@@ -63,6 +63,11 @@ Entre céu e terra, a beleza a brilhar.
 O vento sussurra histórias de tradição,
 Cidade de Angola, orgulho do coração.
             </pre>
+        </section>
+
+ <section id="emblematica">
+            <img src="images/serraLeba.jpg" alt="Serra da Leba ao pôr-do-sol">
+            <div class="frase">"Lubango, onde a natureza toca o céu"</div>
         </section>
 
     </main>
