--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@ Ao longo do meu percurso académico, tenho trabalhado em projetos que envolvem l
       <div class="projetos-container">
         <div class="card">
           <h3>Lab 1</h3>
-    
           <a href="./lab1/index.html" class="card-btn">Ver Projeto</a>
         </div>
 
@@ -50,8 +49,15 @@ Ao longo do meu percurso académico, tenho trabalhado em projetos que envolvem l
           <h3>Lab 3</h3>
           <a href="./lab3/index.html" class="card-btn">Ver Projeto</a>
         </div>
-      </div>
+
+        <div class="card">
+          <h3>Lab 4</h3>
+          <a href="./lab4/index.html" class="card-btn">Ver Projeto</a>
+        </div>
+
     </section>
+
+
 
     <section class="disciplina" id="disciplina">
       <h2>Sobre a Disciplina</h2>
