--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@ Ao longo do meu percurso académico, tenho trabalhado em projetos que envolvem l
           <a href="./lab4/index.html" class="card-btn">Ver Projeto</a>
         </div>
 
+        <div class="card">
+          <h3>Lab 5</h3>
+          <a href="./lab5/index.html" class="card-btn">Ver Projeto</a>
+        </div>
+
     </section>
 
 
@@ -69,7 +74,6 @@ Ao longo do meu percurso académico, tenho trabalhado em projetos que envolvem l
             boas práticas de desenvolvimento e design centrado no utilizador.
           </p>
         </div>
-
         </div>
       </div>
     </section>
