--- a/lab4/index.html
+++ b/lab4/index.html
@@ -10,14 +10,13 @@
 <body>
     <header>
         <h1>Laboratório 4</h1>
- 
     </header>
 
     <main>
         <section>
             <h2 id="titulo"  onmouseover="destacarTitulo()" onmouseout="voltarTitulo()" >Explora os eventos de rato</h2>
 
-            <button onclick="countClick()">Click</button>
+            <button onclick="countClick()">Conta!</button>
             <button ondblclick="resetContador()">Reset Contador (Click 2x)</button>
 
             
