--- a/lab5/index.html
+++ b/lab5/index.html
@@ -44,6 +44,11 @@
                 <span id="contador">0</span>
             </div>
 
+            <div>
+                <p>7.Autimatic Counter</p>
+                <span id="contador2">0</span>
+            </div>
+
         </section>
 
     </main>
