--- a/lab5/index.html
+++ b/lab5/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript pt2</title>
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
@@ -33,15 +35,32 @@
 
 
             <div>
-                <p>4. Escolha uma cor em inglês:</p>
-                <input type="text" id="corInput">
-                <button onclick="mudarCor(document.getElementById('corInput'))">Submeter</button>
+                <select onchange="mudarCor(this)">
+                    <option value="">Escolha uma cor</option>
+                    <option value="white">Branco</option>
+                    <option value="lightblue">Azul Claro</option>
+                    <option value="lightgreen">Verde Claro</option>
+                    <option value="yellow">Amarelo</option>
+                    <option value="pink">Rosa</option>
+                    <option value="gray">Cinza</option>
+                </select>
+
             </div>
 
             <div>
                 <p>5.</p>
                 <button onclick="countClick()">Conta! </button>
                 <span id="contador">0</span>
+            </div>
+
+            <div>
+
+                <form onsubmit="enviarFormulario(event)">
+                    <input type="text" id="nome" placeholder="Nome" required>
+                    <input type="number" id="idade" placeholder="Idade" required>
+                    <input type="submit" value="Enviar">
+                    <p id="mensagem"></p>
+                </form>
             </div>
 
             <div>
