--- a/lab5/index.html
+++ b/lab5/index.html
@@ -35,8 +35,8 @@
 
 
             <div>
+                <p>4.Escolha uma cor:</p>
                 <select onchange="mudarCor(this)">
-                    <option value="">Escolha uma cor</option>
                     <option value="white">Branco</option>
                     <option value="lightblue">Azul Claro</option>
                     <option value="lightgreen">Verde Claro</option>
@@ -50,11 +50,11 @@
             <div>
                 <p>5.</p>
                 <button onclick="countClick()">Conta! </button>
-                <span id="contador">0</span>
+                <p id="contador">0</p>
             </div>
 
             <div>
-
+                <p>6.</p>
                 <form onsubmit="enviarFormulario(event)">
                     <input type="text" id="nome" placeholder="Nome" required>
                     <input type="number" id="idade" placeholder="Idade" required>
