--- a/lab5/index.html
+++ b/lab5/index.html
@@ -65,7 +65,7 @@
 
             <div>
                 <p>7.Autimatic Counter</p>
-                <span id="contador2">0</span>
+                <p id="contador2">0</p>
             </div>
 
         </section>
