--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@ Ao longo do meu percurso académico, tenho trabalhado em projetos que envolvem l
           <a href="./lab5/index.html" class="card-btn">Ver Projeto</a>
         </div>
 
+                <div class="card">
+          <h3>Lab 5</h3>
+          <a href="./lab6/index.html" class="card-btn">Ver Projeto</a>
+        </div>
+
+                <div class="card">
+          <h3>Lab 5</h3>
+          <a href="./lab7/index.html" class="card-btn">Ver Projeto</a>
+        </div>
     </section>
 
 
