--- a/lab7/index.html
+++ b/lab7/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <link rel="stylesheet" href="css/style1.css">
+    <link rel="stylesheet" href="css/style1.css">
 
     <title>Loja de Produtos</title>
 </head>
@@ -19,21 +19,21 @@
 </header>
 
 <body>
-
     <section id="produtos">
-        <h2>Lista de Produtos</h2>
+        <h2>Selecione os seus Produtos</h2>
         <section class="produtos-lista">
         </section>
     </section>
 
     <section id="cesto">
-         <h2>Cesto</h2>
+        <h2>Cesto</h2>
         <section class="cesto-lista">
         </section>
         <p id="totalCesto">Total: €0.00</p>
     </section>
 
-<script src="scripts/main.js"></script>
+    <script src="scripts/produtos.js"></script>
+    <script src="scripts/main.js"></script>
 
 </body>
 
